Solucion de probelmas anteriormente solucionados en las clases GestorPedidos, GestorRestaurantes, GestorLogin y GestorPedidos